src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/classDefMissing.wacc
# class instantiated doesn't exist

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    MyClass x = new MyClass {}
end
